--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <p>Testni paragraf</p>
 <input type=button onClick=alert1()>
 </br>
-<script src="logic.js">
-
+<script>
+//Tukaj bo javascript.
+function alert1(){
+alert('Pritisnil si gumb');
+}
+</script>
 </html>
