--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <p>Testni paragraf</p>
-<input type=button onClick=alert1()>
+<input type=button value=Pritisni! onClick=alert1()>
 </br>
 <script>
 //Tukaj bo javascript.
