--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html>
 
-<p>Testni paragraf</p>
-<input type=button value=Pritisni! onClick=alert1()>
-</br>
-<script>
-//Tukaj bo javascript.
-function alert1(){
-alert('Pritisnil si gumb');
-}
-</script>
+<head>
+<script src="javascript.js"></script>
+<script src="phonegap.js"></script>
+<link rel="stylesheet" href="style.css">
+</head>
+
+
+<body>
+<div align="center">
+</br></br></br></br>
+<input id="oval" type="button" OnClick="zamenjajbarvo('#0000FF')" value="Modra">
+<input type="button" onclick="zamenjajbarvo('#00FF00')" value="Zelena">
+<input type="button" onclick="zamenjajbarvo('#FFFFFF')" value="Bela">
+<input type="button" onclick="zamenjajbarvo('#000000')" value="Črna">
+<div>
+
+
+</body>
+
+
 </html>
